updating refresh token

--- a/.envExample
+++ b/.envExample
@@ -1,6 +1,6 @@
 PORT=7777
 MONGO_DB_URL='mongodb://localhost:27017/Auth'
-secretKey= '12345'
+secretKey= ''
 expiresIn= '1hr'
 OTPexpiresIn= '1min'
 
