--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jwt-authentication-api-with-node.js-and-express",
   "version": "1.0.0",
-  "description": "- User Authentication: Implement a robust authentication system using JWT to securely authenticate users.\r - Signup: Allow users to create new accounts by providing necessary information such as username and password.\r - Login: Enable users to securely log in to their accounts using their credentials.\r - Logout: Provide a secure mechanism for users to log out and invalidate their JWT tokens.\r - Middleware Integration: Utilize middleware functions to authenticate and authorize API endpoints.\r - Error Handling: Implement error handling mechanisms to provide informative responses for various scenarios.",
+  "description": "This project aims to provide a flexible and reliable authentication solution for building secure APIs with JWT authentication. Whether you're creating a web application, mobile app backend, or any other type of server-side application, this repository serves as a solid foundation for implementing user authentication securely.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
